# bensooraj-pytorch-cifar10-play

./: .gitignore  README.md  pyproject.toml
logs/cifar10/: events.out.tfevents.1759596156.ip-172-31-85-6.5111.0  events.out.tfevents.1759596164.ip-172-31-85-6.5111.1
logs/cifar10/Metrics_Test Accuracy_ModelV1/: events.out.tfevents.1759596204.ip-172-31-85-6.5111.4
logs/cifar10/Metrics_Test Loss_ModelV1/: events.out.tfevents.1759596204.ip-172-31-85-6.5111.3
logs/cifar10/Metrics_Train Accuracy_ModelV1/: events.out.tfevents.1759596203.ip-172-31-85-6.5111.2
logs/mnist/: events.out.tfevents.1759131799.Bens-MBP.hgu_lan.45628.0  events.out.tfevents.1759140635.Bens-MBP.hgu_lan.46772.4  events.out.tfevents.1759145791.Bens-MBP.hgu_lan.48561.0  events.out.tfevents.1759145861.Bens-MBP.hgu_lan.48623.0
logs/mnist/Metrics_Test Accuracy_ModelV1/: events.out.tfevents.1759131837.Bens-MBP.hgu_lan.45628.3
logs/mnist/Metrics_Test Accuracy_ModelV2/: events.out.tfevents.1759140649.Bens-MBP.hgu_lan.46772.7
logs/mnist/Metrics_Test Accuracy_ModelV3/: events.out.tfevents.1759144556.Bens-MBP.hgu_lan.48268.3  events.out.tfevents.1759145914.Bens-MBP.hgu_lan.48623.3
logs/mnist/Metrics_Test Loss_ModelV1/: events.out.tfevents.1759131837.Bens-MBP.hgu_lan.45628.2
logs/mnist/Metrics_Test Loss_ModelV2/: events.out.tfevents.1759140649.Bens-MBP.hgu_lan.46772.6
src/data/: __init__.py  transforms.py
src/models/: __init__.py  model_v1.py  model_v2.py  model_v3.py
src/notebooks/: 1_exploratory_analysis.ipynb  2_base_model.ipynb  3_lighter_model.ipynb  4_lighter_model_v2.ipynb  4_lighter_model_v3.ipynb
src/pytorch_mnist_play/: __init__.py  trainer.py
src/pytorch_play/: trainer.py
(+6 files in other folders)
