[project]
name = "pytorch-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bensooraj", email = "bensooraj@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "pydantic>=2.11.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.scripts]
pytorch-play = "pytorch_play:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
